deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fraudguard
  labels:
    # Pod Security Admission no nível mais restritivo
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
